# smart-study-buddy

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  main.cpp  placeholder.txt
code/ProjectTemplate/: .gitignore
code/core/: CMakeLists.txt  Schedule.cpp  Schedule.h  SchedulerEngine.cpp  SchedulerEngine.h  StudySession.cpp  StudySession.h  Task.cpp  Task.h  TaskFactory.cpp  TaskFactory.h  TaskTypes.h
code/data/: CMakeLists.txt  FileHandler.cpp  FileHandler.h
code/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  UIController.cpp  UIController.h
